Add: Tokens and authorisation

--- a/GameJwt.csproj
+++ b/GameJwt.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>eb7cd65e-47d0-4b82-8f8f-1729e1b849ac</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
